Add Proxies to prevent Curlie from blocking our requests

--- a/CurlieIndex/CurlieIndex/CurlieIndex.csproj
+++ b/CurlieIndex/CurlieIndex/CurlieIndex.csproj
@@ -9,4 +9,10 @@
     <PackageReference Include="HtmlAgilityPack" Version="1.11.12" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="proxies.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
